contenedores-JuanAntonio/kubernetes/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  
  labels:
    run: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mongo
  template:
    metadata:
      labels:
        run: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:5.0
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-persistent
          mountPath: /var/lib/mongo
      volumes:
      - name: mongo-persistent
        persistentVolumeClaim:
          claimName: mongo-pv-claim
