contenedores-JuanAntonio/kubernetes/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  
spec:
  selector:
    run: mongo
  type: ClusterIP  
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
