contenedores-JuanAntonio/kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
