contenedores-JuanAntonio/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
 
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: inscripcion-andres.com
    http:
      paths:
      - path: '/'
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 5000
